# xrpl-lib-rs

./: Cargo.toml  README.md
.github/workflows/: lint.yaml  test.yaml  udeps.yml
src/: address.rs  amount.rs  base58check.rs  crypto.rs  currency_code.rs  decimal.rs  hash.rs  interop.rs  lib.rs  rpc.rs  secret.rs  testnet_faucet.rs  transaction_result.rs  util.rs  utils.rs  xfl.rs
src/amount/: mod.rs  token.rs  xrp.rs
src/transaction/: field.rs  flags.rs  mod.rs  utilities.rs
tests/: amount.rs  testnet.rs  testnet_faucet.rs
tests/data/: amount.json  data-driven-tests.json  hook-on-tt-invoke.wasm  hook-state.c  hook-state.wasm
