[package]
name = "xrpl-lib"
version = "0.0.0"
edition = "2021"

[dependencies]
k256 = "0.13.1"
num-bigint = "0.4.3"
num-traits = "0.2.15"
ripemd = "0.1.3"
sha2 = "0.10.6"
thiserror = "1.0.40"

[dev-dependencies]
hex-literal = "0.4.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.37"
