[package]
name = "xrpl-lib"
version = "0.0.0"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
hex = "0.4.3"
k256 = "0.13.1"
num-bigint = "0.4.3"
num-traits = "0.2.15"
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls"] }
ripemd = "0.1.3"
serde = { version = "1.0.164", features = ["derive"] }
sha2 = "0.10.6"
thiserror = "1.0.40"
url = "2.4.0"

[dev-dependencies]
hex-literal = "0.4.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2.10", features = ["js"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.37"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1.28.2", features = ["full"] }
